Bug squashin

--- a/assets/css/search_db.css
+++ b/assets/css/search_db.css
@@ -122,7 +122,7 @@ input[type="radio"], input[type="checkbox"] {
   background-color: #f2f9f8;
   content: "";
   display: block;
-  height: 10px;
+  height: 8px;
   position: absolute;
   width: 10px;
 }
